<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.delete.DeleteFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearchDelete"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/btnSearchVehicle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_vehicle"
            android:inputType="textCapCharacters"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSearchVehicle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_56dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:text="Buscar"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutSearchDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutSearchDelete"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutSearchDelete" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContainerInfoSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginEnd="@dimen/dimen_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearchDelete">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cvPhotoUserSearch"
                android:layout_width="@dimen/dimen_140"
                android:layout_height="@dimen/dimen_140"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="3pt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/llContentImageCamera"
                android:layout_width="@dimen/icono_60dp"
                android:layout_height="@dimen/icono_60dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-30dp"
                android:background="@drawable/background_camera"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/cvPhotoUserSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvPhotoUserSearch">

                <ImageView
                    android:id="@+id/ivIconoCamaraSearch"
                    android:layout_width="@dimen/dimens_21dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dimen_15dp"
                    android:background="@color/verdeColorPrimary"
                    android:gravity="center"
                    android:src="@drawable/ic_camera" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
                app:layout_constraintEnd_toStartOf="@+id/imageViewEditInfo"
                app:layout_constraintStart_toEndOf="@+id/cvPhotoUserSearch"
                app:layout_constraintTop_toTopOf="@+id/cvPhotoUserSearch">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placa"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewPlacaSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_placa"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/cvPhotoUserSearch"
                app:layout_constraintEnd_toStartOf="@+id/imageViewEditInfo"
                app:layout_constraintStart_toEndOf="@+id/cvPhotoUserSearch"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tipo:"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewTypeSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_placa"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewEditInfo"
                android:layout_width="@dimen/dimen_45dp"
                android:layout_height="@dimen/dimen_45dp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="pasageros"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spNumPasagerosSearch"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_45dp"
                android:layout_margin="10dp"
                android:layout_weight="3"
                android:textAlignment="center"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Modelo"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edt_main"
                android:orientation="horizontal">
                    <EditText
                        android:id="@+id/editTextModeloSearch"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_45dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:enabled="false"
                        android:gravity="center"
                        android:inputType="textCapCharacters"
                        android:textColor="@color/verdeColorPrimary"
                        android:textColorHint="@color/verdeColorPrimary"
                        tools:ignore="TextFields" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSelectColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <Button
                android:id="@+id/btnSelectColorBgSearch"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_45dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:layout_weight="2"
                android:text="Color"
                android:visibility="gone"
                app:cornerRadius="4dp" />

            <TextView
                android:id="@+id/textViewTitleColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Color"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:background="@drawable/edt_main"
                android:gravity="center"
                android:padding="@dimen/dimen_8dp"
                android:layout_height="@dimen/dimen_45dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/CIVColorChangeSearch"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/grisClaro"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:background="@color/verdeColorAccent"
            android:text="@string/title_update"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>